--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -8,19 +8,24 @@
             фильмов, которые известны под общим названием дорамы.</p>
 
     </div>
+{% for dorama in page_obj %}
     <section class="post-list">
         <div class="img-link">
-            <a href="41324-linchevatel.html"><img src="wp-content/uploads/2023/11/linchevatel-340x470.jpg"
-                                                  alt=""><span>Линчеватель</span></a>
+            <a href="{% url 'dorama_info:dorama-info' dorama_name_slug=dorama.slug %}"><img src="{{ dorama.poster.url }}"
+                                                  alt=""><span>{{ dorama.name }}</span></a>
         </div>
-        <em>Vigilante</em>
         <table>
             <tbody>
             <tr>
-                <td><u>Южная Корея, 2023</u></td>
+                <td><u>{{ dorama.country }}, {{ dorama.release_year }}</u></td>
             </tr>
             <tr>
-                <td><u>Боевик, Триллер</u></td>
+                <td><u>
+                    {% for genre in dorama.genres.all %}
+                        {{ genre.genre_name }}
+                        {% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </u></td>
             </tr>
             </tbody>
         </table>
@@ -28,307 +33,31 @@
         <table class="table-hom">
             <tbody class="tbody-hom">
             <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>8 серий</td>
+                <td colspan="2"><span class="i1">Сериал: </span>{{ dorama.duration_episodes }} серии</td>
             </tr>
             <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>4</b> серия</i></td>
+                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>{{ dorama.duration_episodes|add:"-1" }}</b> серии</i></td>
             </tr>
             <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>2</b> серия</i></td>
+                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>{{ dorama.duration_episodes }}</b> серии</i></td>
             </tr>
             </tbody>
         </table>
-        <div class="status">Выходит</div>
+        <div class="status">{{ dorama.status }}</div>
     </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="41198-luna-kotoraya-vosxodit-dnem.html"><img
-                src="wp-content/uploads/2023/11/luna-kotoraya-vosxodit-dnem-340x470.jpg" alt=""><span>Луна, которая восходит днем</span></a>
-        </div>
-        <em>Nate tteuneun dal</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Южная Корея, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Исторический, Мелодрама, Триллер</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>14 серий</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>5</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>4</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="41410-zvukovaya-konfeta-tvoj-zvuk-kotoryj-napolnyaet-menya.html"><img
-                src="wp-content/uploads/2023/11/zvukovaya-konfeta-tvoj-zvuk-kotoryj-napolnyaet-menya-340x470.jpg"
-                alt=""><span>Звуковая конфета: Твой звук, который ...</span></a>
-        </div>
-        <em>Sound Candy: Your Sound That Fills Me</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Южная Корея, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Драма</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>10 серий</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>1</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>10</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="41311-istoriya-dvorca-kunnin.html"><img
-                src="wp-content/uploads/2023/11/istoriya-dvorca-kunnin-340x470.jpg" alt=""><span>История дворца Куньнин</span></a>
-        </div>
-        <em>Ning An Ru Meng</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Китай, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Исторический, Мелодрама</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>38 серий</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>16</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>16</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="35190-koshka-i-rybka.html"><img
-                src="wp-content/uploads/2023/02/koshka-i-rybka-340x470.jpg" alt="Кошка и рыбка"><span>Кошка и рыбка</span></a>
-        </div>
-        <em>Qi Zhe Yu De Mao</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Китай, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Мелодрама</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>24 серии</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>14</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>24</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="41240-lyubov-eto-panaceya.html"><img
-                src="wp-content/uploads/2023/11/lyubov-eto-panaceya-340x470.jpg" alt=""><span>Любовь &#8212; это панацея</span></a>
-        </div>
-        <em>Zhi yu xi lian ren</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Китай, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Мелодрама</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>34 серии</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>14</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="40918-biografiya-zlodeya.html"><img
-                src="wp-content/uploads/2023/10/biografiya-zlodeya-340x470.jpg" alt=""><span>Биография злодея</span></a>
-        </div>
-        <em>Akinjeonki</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Южная Корея, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Криминал, Триллер</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>10 серий</td>
-            </tr>
-            </tbody>
-        </table>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="40863-otlichnyj-den-chtoby-stat-sobakoj.html"><img
-                src="wp-content/uploads/2023/10/otlichnyj-den-%E2%80%A6y-stat-sobakoj-340x470.jpg"
-                alt=""><span>Отличный день, чтобы стать собакой</span></a>
-        </div>
-        <em>A Good Day to be a Dog</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Южная Корея, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Комедия, Мелодрама, Фантастика</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>14 серий</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>6</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>4</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="40413-devyat-pravednikov.html"><img
-                src="wp-content/uploads/2023/09/devyat-pravednikov-340x470.jpg" alt=""><span>Девять праведников</span></a>
-        </div>
-        <em>Jiu Yi Ren</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Китай, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Исторический</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>25 серий</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>4</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>8</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
-    <section class="post-list">
-        <div class="img-link">
-            <a href="40871-trefy-i-chervy.html"><img
-                src="wp-content/uploads/2023/10/trefy-i-chervy1-340x470.jpg" alt=""><span>Мистер и Миссис Чэнь</span></a>
-        </div>
-        <em>Mei Hua Hong Tao</em>
-        <table>
-            <tbody>
-            <tr>
-                <td><u>Китай, 2023</u></td>
-            </tr>
-            <tr>
-                <td><u>Драма, Исторический, Криминал</u></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <table class="table-hom">
-            <tbody class="tbody-hom">
-            <tr>
-                <td colspan="2"><span class="i1">Сериал: </span>32 серии</td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Озвучка:</span><i class="s2"><b>12</b> серия</i></td>
-            </tr>
-            <tr>
-                <td colspan="2"><span class="i1">Субтитры:</span><i class="s2"><b>20</b> серия</i></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="status">Выходит</div>
-    </section>
+{% endfor %}
 
 </article>
 <div style="clear:both;padding-bottom: 20px;"></div>
 <div class="page-club">
-    <div class="art-pager"><span class='page-numbers current active'>1</span>
-        <a class='page-numbers' href='page/2.html'>2</a>
-        <a class='page-numbers' href='page/3.html'>3</a>
-        <span class="page-numbers dots more">&hellip;</span>
-        <a class='page-numbers' href='page/509.html'>509</a>
-        <a class="next page-numbers" href="page/2.html">Далее &rarr;</a></div>
+    <div class="art-pager">
+        {% for p in page_obj.paginator.page_range %}
+            {% if page_obj.number == p %}
+                <span class='page-numbers current active'>{{ p }}</span>
+            {% else %}
+                <a class='page-numbers' href="?page={{ p }}">{{ p }}</a>
+            {% endif %}
+        {% endfor %}
+    </div>
 </div>
 {% endblock content %}
